# VerbaSiminn

./: .gitignore  README.md  REVIEW_PLAN.md  pyproject.toml
.github/workflows/: publish.yml
tests/: test_connection.py  test_unit.py
verba_client/: __init__.py  client.py  exceptions.py  models.py
