[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "verba-client"
version = "0.1.1"
description = "Python client for the Verba (VFC Capture) HTTP Business API"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Vignir Lydsson" },
]
readme = "README.md"
keywords = ["verba", "vfc-capture", "call-recording", "api-client"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Telephony",
    "Typing :: Typed",
]
dependencies = [
    "requests>=2.28",
]

[project.urls]
Homepage = "https://github.com/vignirvignir/VerbaSiminn"
Repository = "https://github.com/vignirvignir/VerbaSiminn"
Issues = "https://github.com/vignirvignir/VerbaSiminn/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "responses>=0.23",
    "python-dotenv>=1.0",
]
